# XM

./: pom.xml  requirements.txt  vcpkg.json
JAVA后台/: pom.xml
tests/: test_strategy_logger.py
一键启动器模块/: requirements.txt  utils.py  健康检查.py  启动器主程序.py  日志聚合器.py  服务定义.yaml  环境自检.py  进程管理器.py  配置编译器.py
一键启动器模块/打包发布/: pyinstaller.spec
云储存模块/: BOS存储适配.java  云存储接口定义.java  云端资源管理.py
云存储模块/: 云存储接口定义.JAVA  云端资源管理.JAVA
交易执行模块/: pom.xml  交易接口适配器.java  交易接口适配器_示例.JAVA  交易网关服务.java  券商交易接口.java  订单撮合与回报.java
客户端UI模块/: 交易界面总览.py  性能评分可视化.py  设置中心.py
性能监控模块/: 响应评分计算.JAVA  性能指标埋点协议.H  性能数据记录.JAVA
性能监视模块/: 响应评分计算.java  性能指标埋点协议.h  性能数据记录.java
数据储存模块/: ClickHouse写入服务.java  ClickHouse库表设计.sql  Redis实时缓存.java  数据库连接配置.yaml
数据存储模块/: ClckHouse库表设计.sql  ClickHouse写入服务.java  Redis实时缓存.java  pom.xml  数据库连接配置.yaml
数据接入模块/: CMakeLists.txt  HTTP行情接口.H  HTTP行情接口.cpp  MAIN.CPP  MarketDataTypes.h  实时推送接口_券商TCP.CPP  实时推送接口_券商TCP.H  行情数据适配层.H  行情数据适配层.cpp
数据源接入模块/: CMakeLists.txt  HTTP行情接口.cPP  HTTP行情接口.h  main.cpp  实时推送接口_券商TCP.CPP  实时推送接口_券商TCP.H  行情数据适配层.CPP  行情数据适配层.H
模型训练与管理模块/: 模型版本管理.py  自学习训练管道.py  训练任务触发器.java
策略引擎模块/: 特征快照与样本采集.py  禁止未来函数检测.py  策略调度与执行.py  策略运行日志.py
